# robot-app

./: .gitignore  .gitmodules  README.md  index.html
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/disbot_controller/share/disbot_controller/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gz_ros2_control/share/gz_ros2_control/: gz_hardware_plugins.xml  package.sh  package.xml
install/gz_ros2_control_demos/lib/gz_ros2_control_demos/: example_ackermann_drive  example_diff_drive  example_gripper  example_position  (+1 more)
install/gz_ros2_control_tests/share/gz_ros2_control_tests/: package.sh  package.xml
log/: latest_build  latest_list
src/disbot_controller/: CMakeLists.txt
src/domain_randomization/: package.xml  setup.cfg  setup.py
src/domain_randomization/domain_randomization/: domain_randomizer.py  dynamics_randomizer.py  main.py  material_randomizer.py
src/domain_randomization/launch/: domain_randomization.launch.py
src/grasp_training/: package.xml  setup.cfg  setup.py
src/grasp_training/config/: gen3_controllers.yaml
src/grasp_training/grasp_training/: grasp_cube.py  simple_moveit_interface.py  test_grasp.py
src/grasp_training/launch/: grasp_demo.launch.py  test_grasp.launch.py
src/kinova_scene_demo/: CMakeLists.txt  package.xml
src/kinova_scene_demo/scripts/: add_objects.py
src/my_plate_model/: model.config  plate.sdf
src/my_table_model/: model.config  table.sdf
src/table_drawer/: table_with_drawers.sdf  world.sdf
src/table_plate_demo/: CMakeLists.txt
src/table_plate_demo/launch/: table_plate_demo.launch.py
src/table_plate_demo/urdf/: kinova_gen3_fixed.urdf
(+94 files in other folders)
